--- a/src/index.scss
+++ b/src/index.scss
@@ -37,9 +37,14 @@ body {
   width: 240px;
 }
 
+.ant-card-cover
+.card-img {
+  height: 350px;
+}
+
 .ant-image {
   width: 200px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .main-list {
@@ -69,7 +74,7 @@ body {
   }
 
   &__text {
-    margin-left: 10px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
   }
@@ -89,4 +94,8 @@ body {
 .site-card-border-less-wrapper {
   padding: 30px;
   background: #ececec;
+}
+
+.ant-select {
+  width: 100%;
 }
