--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -11,3 +11,13 @@
     flex-direction: column;
     text-align: center;
 }
+
+.movie {
+    text-align: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 1em;
+    margin-bottom: 10px;
+}
